--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -130,6 +130,7 @@
       [/^.*Firefox\/([\d\.]*)\b.*$/, "Firefox $1"],
       [/^.*OPR\/([\d\.]*)\b.*$/, "Opera $1"],
       [/^.*OPiOS\/([\d\.]*)\b.*$/, "Opera Mini $1"],
+      [/^.*FxiOS\/([\d\.]*)\b.*$/, "Firefox (for iOS) $1"],
       /* This has to go last: Safari has "Version/8.0.5 Safari/600.5.17", but "Safari/600.5.17" is the WebKit version, which Chrome and Opera also include.*/
       [/^.*Version\/([\d\.]*)\b.*$/, "Safari $1"]
     ];
