--- a/domains/misc/badssl.com/index.html
+++ b/domains/misc/badssl.com/index.html
@@ -160,6 +160,7 @@
       [/^.*Android (\d+(\.\d+)+).*; ([^;]+) Build.*$/g, "Android $1 ($3)"], // Android + device name
       [/^.*Android (\d+(\.\d+)+).*$/g, "Android $1"],
       [/^.*Linux.*$/g, "Linux"],
+      [/^.*Windows NT (\d+)\.(\d+).*$/g, "Windows $1.$2"],
       [/^.*Windows.*$/g, "Windows"],
     ];
 
